src/pages/strategy/tabs/mstship/mstship.css
.tab_mstship {
	width:680px;
}
.tab_mstship .factory {
	display:none;
}
.tab_mstship .cg_notes {
	margin:0px 0px 10px 0px;
	border-radius:5px 5px 5px 5px;
	display:none;
}
.tab_mstship .cg_notes em {
	font-size:12px;
}

/* FILTERS
--------------------------------*/
.tab_mstship .filters {
	width:700px;
	margin:0px 0px 10px 0px;
	background:#f0f5ff;
	padding:5px 10px;
	border-bottom:1px solid #369;
}
.tab_mstship .filters .stype {
	padding:0px 8px;
	height:20px;
	line-height: 20px;
	margin:0px 6px 4px 0px;
	float:left;
	background:#09c;
	color:#fff;
	border-radius: 5px;
	font-weight:bold;
}
.tab_mstship .filters .stype.active {
	background:#fff;
	color:#000;
	font-weight:bold;
}

/* SHIP RECORDS
--------------------------------*/
.tab_mstship .shipRecords {
	width:200px;
	height:850px;
	float:left;
	overflow-y: scroll;
	overflow-x: hidden;
	padding:5px;
	border:1px solid #ccc;
	background:#ffc;
	border-radius: 8px 0px 0px 8px;
}
.tab_mstship .shipRecord {
	width:170px;
	height:20px;
	line-height:20px;
	margin:0px 0px 2px 0px;
	border-radius: 5px;
}
.tab_mstship .shipRecord:hover {
	background:#cfc;
}
.tab_mstship .shipRecord .shipIcon {
	width:20px;
	height:20px;
	float:left;
}
.tab_mstship .shipRecord .shipIcon img {
	width:20px;
	height:20px;
}
.tab_mstship .shipRecord .shipName {
	width:150px;
	height:20px;
	float:left;
	padding:0px 0px 0px 5px;
	white-space:nowrap;
}

/* SHIP INFO
--------------------------------*/
.tab_mstship .shipInfo {
	width:480px;
	min-height:850px;
	float:left;
	background:#eee;
	border:1px solid #ccc;
	border-radius: 0px 8px 8px 0px;
	padding:5px 5px 40px 5px;
	position:relative;
}

/* BASIC
--------------------------------*/
/* CG Vuewer */
.tab_mstship .shipInfo .cgswf {
	width:218px;
	height:300px;
	float:left;
	margin:0px 5px 5px 0px;
	background:#006c91;
}
.tab_mstship .shipInfo .cgswf embed {
	width:218px;
	height:300px;
}

/* Ship Name*/
.tab_mstship .shipInfo .name {
	width:85%;
	height:30px;
	line-height:30px;
	float:left;
	font-size:20px;
	text-align:left;
	text-overflow:ellipsis;
	overflow:hidden;
	white-space:nowrap;
	margin:0px 0px 5px 0px;
}

.tab_mstship .shipInfo .type {
	width:auto;
	max-width:15%;
	height:30px;
	line-height:30px;
	float:right;
	font-size:20px;
	text-align:left;
	text-overflow:ellipsis;
	overflow:hidden;
	white-space:nowrap;
	margin:0px 0px 5px 0px;
}

/* Ship stats */
.tab_mstship .shipInfo .stats {
	width:245px;
	height:132px;
	float:left;
	margin:0px 0px 3px 0px;
}
.tab_mstship .shipInfo .ship_stat {
	width:119px;
	height:20px;
	line-height:20px;
	float:left;
	margin:0px 3px 3px 0px;
}
.tab_mstship .shipInfo .ship_stat_icon {
	width:20px;
	height:20px;
	float:left;
	line-height:16px;
}
.tab_mstship .shipInfo .ship_stat_icon img {
	width:16px;
	height:16px;
	margin:2px;
}
.tab_mstship .shipInfo .ship_stat_name {
	width:45px;
	height:20px;
	float:left;
	font-weight:bold;
	font-size:11px;
}
.tab_mstship .shipInfo .ship_stat_text {
	width:52px;
	height:20px;
	float:left;
	display:none;
	font-size:12px;
	padding:0px 0px 0px 5px;
}
.tab_mstship .shipInfo .ship_stat_value {
	width:25px;
	height:20px;
	font-size:12px;
	float:left;
	text-align:center;
}

/* Equipment */
.tab_mstship .shipInfo .equipments {
	width:245px;
	height:94px;
	float:left;
	margin:0px 0px 5px 0px;
	padding:2px 0px 0px 0px;
}
.tab_mstship .shipInfo .equipment {
	width:245px;
	height:20px;
	margin:0px 0px 3px 0px;
}
.tab_mstship .shipInfo .equipment .capacity {
	width:30px;
	height:20px;
	float:left;
	margin:0px 5px 0px 0px;
	text-align:center;
	font-size:14px;
	font-weight:bold;
}
.tab_mstship .shipInfo .equipment .sloticon {
	width:20px;
	height:20px;
	line-height:20px;
	float:left;
	position:relative;
	z-index:2;
	background:#444;
	border-radius:10px;
}
.tab_mstship .shipInfo .equipment .sloticon img {
	width:20px;
	height:20px;
	display:block;
}
.tab_mstship .shipInfo .equipment .slotitem {
	width:200px;
	height:16px;
	line-height:16px;
	float:left;
	position:relative;
	margin:2px 0px 0px -10px;
	padding-left: 12px;
	z-index:1;
	color: white;
	background:#444;
	border-radius:0px 3px 3px 0px;
	font-size:12px;
	text-overflow: ellipsis;
	overflow:hidden;
	white-space: nowrap; 
}

/* Abyssal JSON */
.tab_mstship .shipInfo .json {
	width:245px;
	height:69px;
	float:left;
	word-wrap: break-word;
	word-break: break-all;
	overflow:auto;
	border:2px inset #555;
	background:#ffc;
	padding:5px;
}
/* Abyssal boss flag & encounter */
.tab_mstship .shipInfo .encounter {
	position:relative;
	left:-20px;
	top:-93px;
	float:left;
	display:none;
}
.tab_mstship .shipInfo .encounter img {
	width:20px;
	height:20px;
}
.tab_mstship .shipInfo .boss {
	position:absolute;
	left:128px;
	top:445px;
	float:left;
	display:none;
}
.tab_mstship .shipInfo .boss img {
	width:15px;
	height:15px;
}

/* Intro message */
.tab_mstship .shipInfo .intro {
	width:245px;
	height:69px;
	float:left;
	font-size:12px;
	text-align:left;
	overflow:auto;
}


/* MORE INFORMATION
--------------------------------*/
.tab_mstship .shipInfo .more {
	/*padding:10px 0px 0px 0px;*/
	margin:10px 0px 10px 0px;
}
.tab_mstship .shipInfo .more .moreinfo_box {
	width:470px;
	height:20px;
	line-height:20px;
	margin:0px 0px 5px 0px;
	overflow:hidden;
}
.tab_mstship .shipInfo .more .ship_label {
	float:left;
	width:90px;
	height:20px;
	font-size:12px;
	color:#888;
	font-weight:bold;
	margin:0px 5px 0px 0px;
}
.tab_mstship .shipInfo .more .rsc {
	width:70px;
	height:20px;
	float:left;
	margin:0px 5px 0px 0px;
}
.tab_mstship .shipInfo .more .rsc_icon {
	width:20px;
	height:20px;
	line-height:16px;
	float:left;
}
.tab_mstship .shipInfo .more .rsc_icon img {
	width:16px;
	height:16px;
	margin:2px;
}
.tab_mstship .shipInfo .more .rsc_value {
	width:50px;
	height:20px;
	padding:0px 0px 0px 5px;
	float:left;
}
/* Remodel */
.tab_mstship .shipInfo .more .remodel_name {
	width:130px;
	height:20px;
	float:left;
	margin:0px 5px 0px 0px;
	overflow:hidden;
	font-weight:bold;
	font-size:14px;
	color:#039;
}
.tab_mstship .shipInfo .more .remodel_level {
	width:70px;
	height:20px;
	float:left;
	margin:0px 5px 0px 0px;
	font-size:12px;
}
.tab_mstship .shipInfo .more .remodel_level span {
	font-weight:bold;
}
/* Other forms */
.tab_mstship .shipInfo .more .other_forms_list {
	float:left;
	width:370px;
	height:20px;
	font-size:12px;
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}
.tab_mstship .shipInfo .more .other_forms_list a {
	margin:0px 10px 0px 0px;
}
/* Scrap Value */

/* Modernization Value */

/* Consumption */

/* Level-dependent Stats */
.tab_mstship .shipInfo .more .at_level.moreinfo_box {
	height: 50px;
}
.tab_mstship .shipInfo .more .at_level.moreinfo_box .level-val {
	float: left;
	width: 20px;
}
.tab_mstship .shipInfo .more .at_level.moreinfo_box .stat-detail {
	margin-left: 55px;
	float: left;
}
.tab_mstship .shipInfo .more .at_level .slider {
	margin:5px 0px 0px 10px;
	width: 400px;
}

/* VOICES and HOURLIES
--------------------------------*/
.tab_mstship .shipInfo .voice {
	height:20px;
	float:left;
	line-height:18px;
	border:1px solid #039;
	background:#def;
	border-radius:3px;
	font-size:12px;
	text-align:center;
}
/* Subtitles */
.tab_mstship .shipInfo .subtitles {
	width:470px;
	margin:10px 0px 20px 0px;
	font-weight: normal;
	font-size:12px;
	text-align: center;
}

/* Regular Voices */
.tab_mstship .shipInfo .voices {
	width:470px;
	margin:10px 0px 10px 0px;
}
.tab_mstship .shipInfo .voices .voice {
	width:90px;
	margin:0px 2px 2px 2px;
}

/* Hourlies */
.tab_mstship .shipInfo .hourlies {
	width:470px;
	margin:0px 0px 10px 0px;
}
.tab_mstship .shipInfo .hourlies .voice {
	width:60px;
	margin:0px 3px 2px 3px;
}
/* AACI
--------------------------------*/
.tab_mstship .shipInfo .aaci {
	width:468px;
	margin:0px 0px 10px 0px;
}
.tab_mstship .shipInfo .aaci .aaciPattern {
	width:290px;
	height:22px;
	margin:0px 0px 1px 0px;
	border-radius:6px;
	font-size:12px;
}
.tab_mstship .shipInfo .aaci .apiId {
	width:40px;
	height:20px;
	margin:0px 5px 0px 0px;
	padding:2px 5px;
	float:left;
}
.tab_mstship .shipInfo .aaci .shipIcon {
	width:20px;
	height:20px;
	margin:0px 1px 0px 0px;
	padding:2px 5px;
	float:left;
}
.tab_mstship .shipInfo .aaci .shipIcon img {
	width:20px;
	height:20px;
	margin-top:-2px;
}
.tab_mstship .shipInfo .aaci .equipIcons {
	width:100px;
	height:20px;
	margin:0px 5px 0px 0px;
	padding:2px 5px;
	float:left;
}
.tab_mstship .shipInfo .aaci .equipIcons img {
	width:20px;
	height:20px;
}
.tab_mstship .shipInfo .aaci .equipIcons .plusIcon {
	width:15px;
	height:15px;
	margin:6px 0px 0px -12px;
	position:relative;
	pointer-events:none;
	filter:hue-rotate(75deg);
	-webkit-filter:hue-rotate(75deg);
	transform:scaleX(-1);
}
.tab_mstship .shipInfo .aaci .equipIcons .minusIcon {
	width:15px;
	height:15px;
	margin:6px 0px 0px -12px;
	position:relative;
	pointer-events:none;
	filter:hue-rotate(-90deg);
	-webkit-filter:hue-rotate(-90deg);
	transform:scaleX(-1);
}
.tab_mstship .shipInfo .aaci .fixed {
	width:50px;
	height:20px;
	margin:0px 5px 0px 0px;
	padding:2px 5px;
	float:left;
}
.tab_mstship .shipInfo .aaci .modifier {
	width:50px;
	height:20px;
	margin:0px 5px 0px 0px;
	padding:2px 5px;
	float:left;
}
.tab_mstship .shipInfo .aaci .aaciPattern.odd {
	background:#ddd;
}
.tab_mstship .shipInfo .aaci .aaciPattern.even {
	background:#ccc;
}
.tab_mstship .shipInfo .aaci .aaciPattern.triggerable {
	background:#ed3;
}

/* GUNFIT
--------------------------------*/
.tab_mstship .shipInfo .gunfit {
	width:470px;
	margin:0px 0px 10px 0px;
}
.tab_mstship .shipInfo .gunfit .fitgear {
	width:400px;
	height:24px;
	margin:0px 0px 3px 0px;
	padding:2px 5px;
	border-radius:6px;
	line-height:20px;
}
.tab_mstship .shipInfo .gunfit .fitgear .gearName {
	width:230px;
	height:20px;
	margin:0px 5px 0px 0px;
	float:left;
	font-size:12px;
}
.tab_mstship .shipInfo .gunfit .fitgear .gearFit {
	width:150px;
	height:20px;
	float:left;
	text-align:center;
	font-size:10px;
}
.tab_mstship .shipInfo .gunfit .fitgear.fit_bonus {
	color:#fff;
	background:#5a5;
}
.tab_mstship .shipInfo .gunfit .fitgear.fit_neutral {
	color:#000;
	background:#ccc;
}
.tab_mstship .shipInfo .gunfit .fitgear.fit_penalty {
	color:#fff;
	background:#a55;
}
.tab_mstship .shipInfo .gunfit .fitgear.fit_unknown {
	
}

/* SPECIAL (Salt Check)
-------------------------------*/
.tab_mstship .shipInfo .tokubest {
	position:absolute;
	bottom:0;
	right:0;
	padding:4px;
}

.tab_mstship .shipInfo .tokubest .salty-zone {
	display:none;
	width : 120px;
	height: 20px;
	line-height: 18px;
	border-radius: 3px;
	font-size: 12px;
	text-align: center;
	padding: 1px;
}

.tab_mstship .shipInfo:not(.salted) .tokubest .salty-zone {
	border: 1px solid #242;
	background: #8c8;
}

.tab_mstship .shipInfo.salted .tokubest .salty-zone {
	border: 1px solid #422;
	background: #c88;
}

.tab_mstship .shipInfo .tokubest .to-quotes {
	width : 120px;
	height: 20px;
	line-height: 18px;
	border-radius: 3px;
	font-size: 12px;
	text-align: center;
	padding: 1px;
	border: 1px solid #242;
	background: #77f;
}

/* salt check */
.tab_mstship .shipInfo.salted #saltable {
	/* blur salt */
	filter: blur(24px);
	-webkit-filter: blur(24px);
}
.tab_mstship .shipRecord.salted {
	/* trans salt */
	opacity: 0;
}
/* salt check */

